# SyndicateEngine

./: .gitignore  CONTRIBUTING.md  Makefile  NOTICE  README.md
.github/workflows/: rust.yml
docs/: reverse-engineering.md
scripts/: capture_visual_diagnostic.sh
syndicate_engine/: Cargo.toml
syndicate_engine/src/: main.rs
syndicate_engine/src/engine/: assets.rs  binary.rs  block_decode.rs  block_texture.rs  camera.rs  config.rs  formats.rs  iso.rs  map_block_correlation.rs  map_catalog.rs  map_decode.rs  map_scene.rs  map_tiles.rs  mission_scene.rs  mission_source.rs  mod.rs  original_audio.rs  original_sprites.rs  palette.rs  palette_decode.rs  report.rs  rnc.rs  runtime_probe.rs  sprite_decode.rs  tab_bank.rs
syndicate_engine/src/game/: agent.rs  combat.rs  map.rs  mod.rs  original_graphics.rs  original_map_view.rs  original_sprites.rs  pathfinding.rs  save.rs  sim.rs  ui.rs  world.rs
