[package]
name = "syndicate_engine"
version = "0.1.0"
edition = "2024"
authors = ["SyndicateEngine contributors"]
description = "A clean-room, open-source, modern tactical isometric engine inspired by Bullfrog's 1993 Syndicate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/syndicate_engine"
readme = "../README.md"

[dependencies]
macroquad = "0.4"
walkdir = "2.5"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
